Trying now deployment method

--- a/.github/workflows/TestandPublish.yml
+++ b/.github/workflows/TestandPublish.yml
@@ -33,6 +33,7 @@ jobs:
           if ($modulepaths.Count -eq 0) {
             Write-Error "No modules found in src/modules"
           }
+          Write-output "Module paths: $outpaths"
 
   Publish:
     needs: SetUp
