--- a/.github/workflows/TestandPublish.yml
+++ b/.github/workflows/TestandPublish.yml
@@ -39,6 +39,6 @@ jobs:
     needs: SetUp
     uses: ntatschner/tatux_shared_workflows/.github/workflows/Publish_To_PSGallery.yml@main
     with:
-      module_path: ${{ needs.SetUp.outputs.module_directories }}
+      module_paths: ${{ needs.SetUp.outputs.module_directories }}
     secrets:
       api_key: ${{ secrets.API_KEY }}
