--- a/.github/workflows/TestandPublish.yml
+++ b/.github/workflows/TestandPublish.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           $modulepaths = Get-ChildItem -Path ${{ github.workspace }}\src\modules\ -Directory
           $outpaths = $modulepaths.FullName -join ','
-          echo "module_directories=$outpaths" >> $GITHUB_OUTPUT
+          echo "module_directories=$outpaths" >> $env:GITHUB_OUTPUT
           if ($modulepaths.Count -eq 0) {
             Write-Error "No modules found in src/modules"
           }
