--- a/.github/workflows/PS-Docs-Test.yml
+++ b/.github/workflows/PS-Docs-Test.yml
@@ -21,9 +21,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: yarn
+          cache: npm
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      - name: Test build website
-        run: yarn build
+        run: npm ci
+      - name: Test Build website
+        working-directory: src/docs_site/tatux-intune
+        run: npm run build
