Modified the workflow files

--- a/.github/workflows/PS-Docs-Test.yml
+++ b/.github/workflows/PS-Docs-Test.yml
@@ -1,4 +1,4 @@
-name: Deploy Docs Site to GitHub Pages
+name: Test Deploy Docs Site to GitHub Pages
 
 on:
     # Runs on pushes targeting the default branch
