Modified the workflow files

--- a/.github/workflows/PS-Docs-Deploy.yml
+++ b/.github/workflows/PS-Docs-Deploy.yml
@@ -21,6 +21,7 @@ jobs:
           
       - uses: actions/setup-node@v4
         with:
+          cache-dependency-path: src/docs_site/tatux-intune/
           node-version: 18
           cache: npm
 
