--- a/.github/workflows/PS-Docs-Test.yml
+++ b/.github/workflows/PS-Docs-Test.yml
@@ -18,13 +18,17 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          
       - uses: actions/setup-node@v4
         with:
+          cache-dependency-path: src/docs_site/tatux-intune/
           node-version: 18
           cache: npm
 
       - name: Install dependencies
+        working-directory: src/docs_site/tatux-intune
         run: npm ci
+
       - name: Test Build website
         working-directory: src/docs_site/tatux-intune
         run: npm run build
