--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -73,9 +73,9 @@ jobs:
             }
             try {
               Import-Module $ModulePath -Force -ErrorAction Stop
-              New-MarkdownHelp -Module $Module -OutputPath $ModuleDocPath -AlphabeticParamsOrder -WithModulePage -ModulePagePath "${{ github.workspace }}\src\docs_site\powershell_docs\docs\$Module\" -OnlineVersionUrl "$WebSiteURL\c\$Module\" -ErrorAction Stop
+              New-MarkdownHelp -Module $Module -OutputPath $OriginalMDPath -AlphabeticParamsOrder -OnlineVersionUrl "$WebSiteURL\c\$Module\" -ErrorAction Stop
             } catch {
-              Write-Error "Failed to generate help for $Module"
+              Write-Error "Failed to generate help for $Module. Error: $_.Exception.Message"
               break
             }
             Write-Output "Generated help for $Module"
