--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -75,7 +75,7 @@ jobs:
               Import-Module $ModulePath -Force -ErrorAction Stop
               New-MarkdownHelp -Module $Module -OutputFolder $OriginalMDPath -AlphabeticParamsOrder -OnlineVersionUrl "$WebSiteURL\c\$Module\" -ErrorAction Stop
             } catch {
-              Write-Error "Failed to generate help for $Module. Error: $_.Exception.Message"
+              Write-Error "Failed to generate help for $Module. Error: $_"
               break
             }
             Write-Output "Generated help for $Module"
