--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -39,6 +39,21 @@ jobs:
         Install-Module -Name PlatyPS -Force -Scope CurrentUser -AllowClobber
         Install-Module -Name Alt3.Docusaurus.Powershell -Scope CurrentUser -AllowClobber
 
+    - name: Install required Modules 
+      run: |
+            $ModulePath = Get-item -Path "${{ matrix.module_path }}"
+            $ModuleParentPaths = Get-ChildItem -Path ${{ github.workspace }}\src\modules\ -Directory
+            $ModuleName = $ModulePath.Name
+            Write-Output "Installing any required modules for $ModuleName"
+            $RequiredModules = (Import-PowerShellDataFile -Path "$($ModulePath.FullName)\$($ModuleName).psd1").RequiredModules
+            if ($RequiredModules) {
+                foreach ($module in $RequiredModules) {
+                    Install-Module -Name $module.ModuleName -RequiredVersion $module.ModuleVersion -Force -ErrorAction Stop
+                }
+            } else {
+                Write-Output "No required modules found."
+            }
+
     - name: Generate External and Markdown Help Files for New Functions
       if: steps.dependencies.outcome == 'success'
       id: generate_new_help
