--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -41,17 +41,18 @@ jobs:
 
     - name: Install required Modules 
       run: |
-            $ModulePath = Get-item -Path "${{ matrix.module_path }}"
             $ModuleParentPaths = Get-ChildItem -Path ${{ github.workspace }}\src\modules\ -Directory
-            $ModuleName = $ModulePath.Name
+            $ModuleParentPaths | % {
+            $ModuleName = $_.Name
             Write-Output "Installing any required modules for $ModuleName"
-            $RequiredModules = (Import-PowerShellDataFile -Path "$($ModulePath.FullName)\$($ModuleName).psd1").RequiredModules
+            $RequiredModules = (Import-PowerShellDataFile -Path "$($_.FullName)\$($ModuleName).psd1").RequiredModules
             if ($RequiredModules) {
                 foreach ($module in $RequiredModules) {
                     Install-Module -Name $module.ModuleName -RequiredVersion $module.ModuleVersion -Force -ErrorAction Stop
                 }
             } else {
                 Write-Output "No required modules found."
+            }
             }
 
     - name: Generate External and Markdown Help Files for New Functions
