--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -151,7 +151,7 @@ jobs:
             $OriginalCabPath = "${{ github.workspace }}\src\onlinehelp\$Module\files\"
             $OriginalMDPath = "${{ github.workspace }}\src\onlinehelp\$Module\docs\"
             try {
-              New-ExternalHelpCab -CabFilesFolder $OriginalMDPath -OutputFolder $OriginalCabPath -IncrementHelpVersion -ErrorAction Stop
+              New-ExternalHelpCab -CabFilesFolder $OriginalMDPath -LandingPagePath $OriginalCabPath -OutputFolder $OriginalCabPath -IncrementHelpVersion -ErrorAction Stop
             } catch {
               Write-Error "Failed to generate external help for $Module. Error: $_.Exception.Message"
               break
