--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -151,7 +151,7 @@ jobs:
             $OriginalCabPath = "${{ github.workspace }}\src\onlinehelp\$Module\files\"
             $OriginalMDPath = "${{ github.workspace }}\src\onlinehelp\$Module\docs\"
             try {
-              New-ExternalHelpCab -CabFilesFolder $OriginalMDPath -LandingPagePath $OriginalCabPath -OutputFolder $OriginalCabPath -IncrementHelpVersion -ErrorAction Stop
+              New-ExternalHelpCab -CabFilesFolder $OriginalMDPath -LandingPagePath "$OriginalCabPath\$Module.md" -OutputFolder $OriginalCabPath -IncrementHelpVersion -ErrorAction Stop
             } catch {
               Write-Error "Failed to generate external help for $Module. Error: $_.Exception.Message"
               break
@@ -161,7 +161,7 @@ jobs:
               if (-Not (Test-Path -Path $ModuleCabPath)) {
                   New-Item-Path $ModuleCabPath -ItemType Directory -Erroraction stop
               }
-              Copy-Item -Path $OriginalCabPath\* -Destination $ModuleCabPath -Force -ErrorAction Stop
+              Copy-Item -Path $OriginalCabPath\* -Destination $ModuleCabPath-Force -ErrorAction Stop
             } catch {
               Write-Error "Failed to copy cab files for $Module"
               break
