--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -78,16 +78,6 @@ jobs:
                 break
               }
               try {
-                if (-not (Test-Path $OriginalCabPath)) {
-                  New-Item -Path $OriginalCabPath -ItemType Directory -Force -Erroraction stop
-                }
-                New-ExternalHelp -Path $ModulePath -OutputPath $OriginalCabPath -ErrorAction Stop
-              } catch {
-                Write-Error "Failed to generate external help for $Module. Error: $_"
-                break
-              }
-            }
-            try {
               Import-Module $ModulePath -Force -ErrorAction Stop
               New-MarkdownHelp -Module $Module -OutputFolder $OriginalMDPath -AlphabeticParamsOrder -WithModulePage -ErrorAction SilentlyContinue
             } catch {
@@ -96,6 +86,16 @@ jobs:
             }
             Write-Output "Generated help for $Module"
         }
+              try {
+                if (-not (Test-Path $OriginalCabPath)) {
+                  New-Item -Path $OriginalCabPath -ItemType Directory -Force -Erroraction stop
+                }
+                New-ExternalHelp -Path $OriginalMDPath -OutputPath $OriginalCabPath -ErrorAction Stop
+              } catch {
+                Write-Error "Failed to generate external help for $Module. Error: $_"
+                break
+              }
+            }
         Write-Output "Generated help for all modules"
       
     - name: Update Markdown Existing Help
