--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -178,7 +178,7 @@ jobs:
             try {
               New-DocusaurusHelp -Module $Module -PrependMarkdown $(Get-ChildItem  $ModuleDocsPath) -Sidebar "docs" -DocsFolder "$ModuleDocsPathdocs -MetaKeywords @("PowerShell", "Commands", "$Module") -ErrorAction Stop
             } catch {
-              Write-Error "Failed to convert help for $Module. Error: $_.Exception.Message"
+              Write-Error "Failed to convert help for $Module. Error: $_"
               break
             }
             Write-Output "Converted help for $Module"
