--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -176,7 +176,7 @@ jobs:
             $Module            
             Import-Module $ModulePath -Force
             try {
-              New-DocusaurusHelp -Module $Module -PrependMarkdown $(Get-ChildItem  $ModuleDocsPath) -Sidebar "docs" -DocsFolder "$($ModuleDocsPath)docs" -MetaKeywords @("PowerShell", "Commands", "$Module") -ErrorAction Stop
+              Get-ChildItem  $ModuleDocsPath | % { New-DocusaurusHelp -Module $Module -PrependMarkdown $_ -Sidebar "docs" -DocsFolder "$($ModuleDocsPath)docs" -MetaKeywords @("PowerShell", "Commands", "$Module") -ErrorAction Stop}
             } catch {
               Write-Error "Failed to convert help for $Module. Error: $_"
               break
