--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -66,7 +66,7 @@ jobs:
             $ModulePath = $_.FullName
             $Module = $_.Name
             $OriginalMDPath = "${{ github.workspace }}\src\onlinehelp\$Module\docs\"
-            $OriginalCabPath = "${{ github.workspace }}\src\onlinehelp\$Module\files\"
+            $OriginalCabPath = "${{ github.workspace }}\src\onlinehelp\$Module\en-GB\"
             $ModuleDocPath = "${{ github.workspace }}\src\docs_site\powershell_docs\docs\$Module\docs"
             $ModulePath
             $Module
@@ -102,7 +102,7 @@ jobs:
             $ModuleFilesPath = "${{ github.workspace }}\src\modules\$Module"
             $ModuleDocsPath = "${{ github.workspace }}\src\docs_site\powershell_docs\docs\$Module\docs\"
             $OriginalMDPath = "${{ github.workspace }}\src\onlinehelp\$Module\docs\"
-            $OriginalCabPath = "${{ github.workspace }}\src\onlinehelp\$Module\files\"
+            $OriginalCabPath = "${{ github.workspace }}\src\onlinehelp\$Module\en-GB\"
             $ModuleDocsPath = "${{ github.workspace }}\src\docs_site\powershell_docs\docs\$Module\docs\"
             $ModulePath
             $Module
@@ -176,7 +176,7 @@ jobs:
             $Module            
             Import-Module $ModulePath -Force
             try {
-              Get-ChildItem  $ModuleDocsPath | % { New-DocusaurusHelp -Module $Module -PrependMarkdown $_ -Sidebar "docs" -DocsFolder "$($ModuleDocsPath)docs" -MetaKeywords @("PowerShell", "Commands", "$Module") -ErrorAction Stop}
+               New-DocusaurusHelp -Module $ModulePath -Sidebar "docs" -DocsFolder "$($ModuleDocsPath)" -MetaKeywords @("PowerShell", "Commands", "$Module") -ErrorAction Stop
             } catch {
               Write-Error "Failed to convert help for $Module. Error: $_"
               break
