--- a/.github/workflows/PS-Docs-Deploy.yml
+++ b/.github/workflows/PS-Docs-Deploy.yml
@@ -6,6 +6,9 @@ on:
     branches: ["main"]
     paths:
       - 'src/docs_site/powershell_docs/**'
+  workflow_run:
+    workflows: [Update Powershell Documentation and convert to Docusaurus format]
+    types: [completed]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -14,6 +17,7 @@ jobs:
   build:
     name: Build Docusaurus
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == "push" }}
     steps:
       - uses: actions/checkout@v4
         with:
