--- a/.github/workflows/PS-Docs-Deploy.yml
+++ b/.github/workflows/PS-Docs-Deploy.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     name: Build Docusaurus
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == "push" }}
+    if: github.event.workflow_run.conclusion == 'success' || github.event_name == "push"
     steps:
       - uses: actions/checkout@v4
         with:
