--- a/.github/workflows/PS-Docs-Deploy.yml
+++ b/.github/workflows/PS-Docs-Deploy.yml
@@ -7,7 +7,7 @@ on:
     paths:
       - 'src/docs_site/powershell_docs/**'
   workflow_run:
-    workflows: [Docs_Build]
+    workflows: [Update Powershell Documentation and convert to Docusaurus format]
     types: [completed]
 
   # Allows you to run this workflow manually from the Actions tab
