--- a/.github/workflows/PS-Docs-Update-Convert.yml
+++ b/.github/workflows/PS-Docs-Update-Convert.yml
@@ -69,9 +69,10 @@ jobs:
             $OriginalMDPath = "${{ github.workspace }}\src\onlinehelp\$Module\docs\"
             $OriginalCabPath = "${{ github.workspace }}\src\onlinehelp\$Module\en-GB\"
             $ModuleDocsPath = "${{ github.workspace }}\src\docs_site\powershell_docs\docs\$Module\docs\"
+            $ModuleCabPath = "${{ github.workspace }}\src\docs_site\powershell_docs\c\$Module\"
             Write-Output "Working on $Module"
             try {
-              foreach ($f in @($OriginalMDPath, $OriginalCabPath, $ModuleDocsPath)) {
+              foreach ($f in @($OriginalMDPath, $OriginalCabPath, $ModuleDocsPath, $ModuleCabPath)) {
                 if (-not (Test-Path -Path $f)) {
                   New-Item -Path $f -ItemType Directory -Force
                 }
@@ -107,7 +108,7 @@ jobs:
             $ModulePath = $_.FullName
             $Module = $_.Name
             Write-Output "Working on $Module"
-            $ModuleCabPath = "${{ github.workspace }}\src\docs_site\powershell_docs\c\$Module\"         
+            $ModuleCabPath = "${{ github.workspace }}\src\docs_site\powershell_docs\c\$Module\"
             $OriginalCabPath = "${{ github.workspace }}\src\onlinehelp\$Module\en-GB\"
             $OriginalMDPath = "${{ github.workspace }}\src\onlinehelp\$Module\docs\"
             try {
@@ -117,7 +118,6 @@ jobs:
               break
             }
             try {
-              Remove-Item -Path $ModuleCabPath\* -Force -ErrorAction SilentlyContinue 
               Copy-Item -Path $OriginalCabPath\* -Destination $ModuleCabPath -Force -ErrorAction Stop
             } catch {
               Write-Error "Failed to copy cab files for $Module. Error: $_"
